# vision-ocr

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DOTS_OCR_SETUP.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  ecosystem.config.js  setup_dots_ocr.sh  start.sh  test_integration.py
backend/: .env.example  pyproject.toml  worker.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: rag.py  upload.py
backend/app/rag/: chroma_client.py  chunker.py  embedder.py  indexer.py  llm.py  retriever.py
docs/: ARCHITECTURE.md  QUICKSTART.md
docs/plans/: 2026-01-20-dots-ocr-web-app-design.md  2026-01-20-dots-ocr-web-app-implementation.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Navigation.tsx
frontend/src/components/search/: ChatInput.tsx  ConversationSidebar.tsx  DocumentFilter.tsx  MessageBubble.tsx
frontend/src/pages/: HistoryPage.tsx  SearchPage.tsx  UploadPage.tsx  WelcomePage.tsx
frontend/src/types/: index.ts
